<resources>
    <string name="app_name">landlord_client</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="default_guest">游客</string>
    <string name="item_info">个人信息</string>
    <string name="item_settings">设置与帮助</string>
    <string name="camera">拍照</string>
    <string name="photoAlbum">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="et_hint">请输入消息</string>
    <string name="send">发送</string>
    <string name="refresh_hall">刷新大厅</string>
    <string name="joker2">大王</string>
    <string name="joker1">小王</string>
    <string name="two">2</string>
    <string name="Ace">A</string>
    <string name="King">K</string>
    <string name="Queen">Q</string>
    <string name="Jake">J</string>
    <string name="ten">10</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="no_answer">不出</string>
    <string name="answer">出牌</string>
    <string name="ready">准备</string>
    <string name="not_ready">取消准备</string>
    <string name="grab">抢地主</string>
    <string name="no_grab">不抢地主</string>
    <string name="no_double">不加倍</string>
    <string name="double2">加两倍</string>
    <string name="double3">加三倍</string>
    <string name="double5">加五倍</string>
    <string name="double_agree">同意加倍</string>
    <string name="double_disagree">不同意加倍</string>
    <string name="win">胜利次数：</string>
    <string name="lose">失败次数：</string>
    <string name="money">持有金额（元）:</string>
    <string name="double_num">加倍：</string>
    <string name="landlord_win">地主胜利</string>
    <string name="farmer_win">农民胜利</string>
    <string name="money_result1">本局战果：</string>
    <string name="money_result2">你还剩的金额：</string>
    <string name="confirm">确认</string>
    <string name="is_you_win">你赢了</string>
</resources>
