<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_tables"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:scrollbars="vertical"/>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <EditText
            android:id="@+id/et_send"
            android:layout_width="215dp"
            android:layout_height="match_parent"
            android:hint="@string/et_hint"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_12"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/send"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20"/>

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/refresh_hall"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"/>

    </LinearLayout>
</LinearLayout>